--- a/config_scripts/TSCNet_step2.yml
+++ b/config_scripts/TSCNet_step2.yml
@@ -5,16 +5,16 @@
 
 device: 'cuda:0'                 # 'cpu' when cuda not available, else 'cuda:0'
 model_config:
-  model_name: 'unet2d_TSCNet'          # Name of the model
+  model_name: 'TSCNetStep2'          # Name of the model
   checkpoint_path: null         # Path to load from saved checkpoints. Enter 'null' when train from scratch
 #  checkpoint_path: '/home/yxsun/win_file/semi-3/Code/3D_Segmentation/results/checkpoints/checkpoint-20210920-130213.pth'         # Path to load from saved checkpoints. Enter 'null' when train from scratch
   loss_name: 'MSE'
 dataset_config:
-  loader_name: 'collagen_dataset_TSCNet'      # Name of the dataset loader
+  loader_name: 'collagen_dataset_TSCNet_mytif'      # Name of the dataset loader
 
   # Below are self-defined parameters used by 'cifar10'
-  #dataset_path: 'E:\20210911CollagenFiber'
-  dataset_path: '/home/yxsun/win_data/20210911CollagenFiber'
+  dataset_path: 'E:\北京大学\semi-3\Code\dataset_tif'
+#  dataset_path: '/home/yxsun/win_data/20210911CollagenFiber'
   train_batch_size: 2
   val_batch_size: 1
 train_config:
@@ -22,7 +22,7 @@ train_config:
 
   # Below are self-defined parameters used by 'regular'
   max_epoch: 100              # Maximum epoch
-  print_freq: 100             # Print log every several iterations
+  print_freq: 1             # Print log every several iterations
   learning_rate: 0.01         # Learning rate
 
 
