--- a/config_scripts/TSCNet_step2_pre.yml
+++ b/config_scripts/TSCNet_step2_pre.yml
@@ -7,7 +7,6 @@ device: 'cuda:0'                 # 'cpu' when cuda not available, else 'cuda:0'
 model_config:
   model_name: 'TSCNetStep2'          # Name of the model
   checkpoint_path: null         # Path to load from saved checkpoints. Enter 'null' when train from scratch
-#  checkpoint_path: '/home/yxsun/win_file/semi-3/Code/TrainFramework_torch/results/checkpoints/checkpoint-20210927-163928.pth'         # Path to load from saved checkpoints. Enter 'null' when train from scratch
 dataset_config:
   loader_name: 'collagen_dataset_TSCNet_mytif'      # Name of the dataset loader
 
@@ -17,11 +16,11 @@ dataset_config:
   train_batch_size: 8
   val_batch_size: 8
 train_config:
-  strategy_name: 'TrainTSCNet'   # Strategy for training
+  strategy_name: 'TrainTSCNet_pre'   # Strategy for training
 
   # Below are self-defined parameters used by 'regular'
   max_epoch: 1000              # Maximum epoch
   print_freq: 5             # Print log every several iterations
-  learning_rate: 0.00001         # Learning rate
+  learning_rate: 0.01         # Learning rate
 
 
